--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,6 @@
   background-size: cover;
   background-attachment: fixed;
   background-color: rgba(238, 88, 88, 0.5);
-  mix-blend-mode: lighten;
 }
 
 #menu_list 
@@ -76,7 +75,7 @@ html
 {
   float: left;
   width: 200px;
-  height: auto;
+  height: 355px;
   overflow: hidden;
   padding: 10px;
   background-color: rgba(238, 88, 88, 0.5);
@@ -84,6 +83,17 @@ html
   margin: 5px;
 }
 
+.column-request 
+{
+  float: left;
+  width: 300px;
+  height: 150px;
+  overflow: hidden;
+  padding: 10px;
+  background-color: rgba(238, 88, 88, 0.5);
+  border: solid 1px; 
+  margin: 5px;
+}
 
 .contenedor-resena
 {
@@ -123,7 +133,17 @@ html
   white-space: nowrap;
   margin: 10px 0;
   padding-bottom: 10px;
-  height: 430px;
+  height: 370px;
+}
+
+.row_inner_request
+{
+  transition: 450ms transform;
+  font-size: 0;
+  white-space: nowrap;
+  margin: 10px 0;
+  padding-bottom: 10px;
+  height: 150px;
 }
 
 .tile
