--- a/app/assets/stylesheets/chat.css
+++ b/app/assets/stylesheets/chat.css
@@ -139,7 +139,7 @@
 .chatlist .block .details
 {
     position: relative;
-    width: 100%; 
+    width: 100%;
 }
 
 .chatlist .block .details .listhead
@@ -223,7 +223,7 @@
 {
     position: relative;
     right: 0;
-    text-align: right;
+    text-align: left;
     max-width: 65%;
     padding: 12px;
     background: #dcf8c6;
@@ -248,6 +248,7 @@
     margin-top: 5px;
     font-size: 0.85em;
     opacity: 0.5;
+    text-align: right;
 }
 
 .frnd_message
@@ -288,6 +289,7 @@
     margin-top: 5px;
     font-size: 0.85em;
     opacity: 0.5;
+    text-align: right;
 }
 
 .chatbox_input
