--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Grupo48</title>
+    <title>DCCARPOOLING</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -44,7 +44,7 @@
                   <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Cuenta", users_show_path(:id => current_user.id) %></div>
                   <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Turnos", turnos_index_path %></div>
                   <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Solicitudes", requests_index_path %></div>
-                  <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Mensajes", mensajes_index_path %></div>
+                  <div align="center"  class="title is-5 has-text-black is-active"><%= link_to "Mensajes", mensajes_path(id_turno: 0) %></div>
                 <hr class="dropdown-divider">
                   <div align="center"  class="title is-5 has-text-black is-active has-text-center"><%= link_to "Cerrar sesion", destroy_user_session_path,  :method => :delete %></div>
                 </a>
