Se hacen cambios al css del help

--- a/app/views/mensajes/new.html.erb
+++ b/app/views/mensajes/new.html.erb
@@ -1,10 +1,10 @@
+
 <div class="container">
   <div class="leftSide">
     <div class="head">
-        <!--<div class="userimg">
-            <img src="user.jpg" class="cover">
-        </div>-->
-        <p class="title is-5">Chats de turnos</p>
+        <div>
+          <p class="title is-5">Chats de turnos</p>
+        </div>
     </div>
 
     <div class="chatlist">
