--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,48 +2,48 @@
     <h1 class="title is-2 has-text-primary">Help</h1>
     
     <details>
-        <summary class = "title is-5 has-text-black">¿Cómo se diferencia DCCarpooling de otros servicios?</summary>
-        <h1 class = "has-text-black">A diferencia de otros sistemas de transporte compartido, donde el chofer se dedica a este como actividad comercial, recibiendo por ello una reumeneración económica por el viaje. En DCCarpooling los conductores son alumnos de la universidad que publican las rutas que ya realizan para poder llegar al lugar de estudio, ofreciendo compartir el auto a otros alumnos, con el único fin ayudar a otros y apoyar al medio ambiente sin recibir un recambio económico. </h1>
+        <summary class = "title is-5 has-text-black mr-4">¿Cómo se diferencia DCCarpooling de otros servicios?</summary>
+        <h1 class = "has-text-black has-text-justified mgr-medium">A diferencia de otros sistemas de transporte compartido, donde el chofer se dedica a este como actividad comercial, recibiendo por ello una reumeneración económica por el viaje. En DCCarpooling los conductores son alumnos de la universidad que publican las rutas que ya realizan para poder llegar al lugar de estudio, ofreciendo compartir el auto a otros alumnos, con el único fin ayudar a otros y apoyar al medio ambiente sin recibir un recambio económico. </h1>
     </details>
 
     <details>
         <summary class = "title is-5 has-text-black">¿Crear una cuenta?</summary>
-        <h1 class = "has-text-black">Para poder participar activamente de todo lo que ofrece DCCarpooling es necesario tener una cuenta, para ello tras ingresar a la página principal de la pagina se debe seleccionar Menú>Registrarse. Se pedirá un correo electrónico y teléfono para poder contactarlo, la contraseña de la cuenta, nombre,, dirección, genero y una pequeña descripción. Se apresta el botón registrarse y la cuenta ya esta creada y lista para ser utilizada.</h1>
+        <h1 class = "has-text-black has-text-justified">Para poder participar activamente de todo lo que ofrece DCCarpooling es necesario tener una cuenta, para ello tras ingresar a la página principal de la pagina se debe seleccionar Menú>Registrarse. Se pedirá un correo electrónico y teléfono para poder contactarlo, la contraseña de la cuenta, nombre,, dirección, genero y una pequeña descripción. Se apresta el botón registrarse y la cuenta ya esta creada y lista para ser utilizada.</h1>
     </details>
 
     <details>
         <summary class = "title is-5 has-text-black">¿Editar los datos de mi cuenta?</summary>
-        <h1 class = "has-text-black">Si es que ya se posee una cuenta y es necesario cambiar alguno de los datos ingresado, DCCarpoling ofrece la posibilidad de ir editándolos en el tiempo. Lo primero es entrar a Menú>Cuenta y seleccionar Editar cuenta. Se mostrará en pantalla toda la información inscrita con la posibilidad de cambiarla al apretar el botón Update, es necesario escribir la clave actual para poder realizar cualquier cambio. Si es que considera que ya no necesitará su cuenta la puede borrar apretando el botón Eliminar cuenta.</h1>
+        <h1 class = "has-text-black has-text-justified">Si es que ya se posee una cuenta y es necesario cambiar alguno de los datos ingresado, DCCarpoling ofrece la posibilidad de ir editándolos en el tiempo. Lo primero es entrar a Menú>Cuenta y seleccionar Editar cuenta. Se mostrará en pantalla toda la información inscrita con la posibilidad de cambiarla al apretar el botón Update, es necesario escribir la clave actual para poder realizar cualquier cambio. Si es que considera que ya no necesitará su cuenta la puede borrar apretando el botón Eliminar cuenta.</h1>
     </details>
 
     <details>
         <summary class = "title is-5 has-text-black">¿Cómo ofrecer un nuevo turno?</summary>
-        <h1 class = "has-text-black">Lo primero es poseer una cuenta, si ya se cumple este requisito se prosigue a Turnos y se apresta el botón Nuevo turno. El cual llevará a un form pidiendo los datos necesarios, tras ser ingresados se apreta el  botón Crear turno. Este se podrá visualizar en Cuenta específicamente en Turnos Publicados Activos. Si posteriormente a su publicación se quiere realizar algún cambio, es necesario apretar el link Ver detalles que se encuentra en la información del turno. Se desplegará el detalle en conjunto con la opción Editar y Eliminar. </h1>
+        <h1 class = "has-text-black has-text-justified">Lo primero es poseer una cuenta, si ya se cumple este requisito se prosigue a Turnos y se apresta el botón Nuevo turno. El cual llevará a un form pidiendo los datos necesarios, tras ser ingresados se apreta el  botón Crear turno. Este se podrá visualizar en Cuenta específicamente en Turnos Publicados Activos. Si posteriormente a su publicación se quiere realizar algún cambio, es necesario apretar el link Ver detalles que se encuentra en la información del turno. Se desplegará el detalle en conjunto con la opción Editar y Eliminar. </h1>
     </details>
 
     <details>
         <summary class = "title is-5 has-text-black">¿Consideraciones que debo tener como conductor?</summary>
-        <h1 class = "has-text-black">Para aceptar nuevos pasajeros a un turno publicado se debe ir a Solicitudes, y la sección Solicitudes Recibidas Pendientes, donde se podrán visualizar todas las solicitudes recibidas con la posibilidad de aceptarlas o rechazarlas. Tras lo cual se mueven al apartado Solicitudes Recibidas Procesadas, especificándose su estado. Al completar un viaje es necesario que como conductor se cambie el estado de este a completado. Para lo cual se debe ir al turno en Cuenta> Turnos Activos y seleccionas el turno a terminar.</h1>
+        <h1 class = "has-text-black has-text-justified">Para aceptar nuevos pasajeros a un turno publicado se debe ir a Solicitudes, y la sección Solicitudes Recibidas Pendientes, donde se podrán visualizar todas las solicitudes recibidas con la posibilidad de aceptarlas o rechazarlas. Tras lo cual se mueven al apartado Solicitudes Recibidas Procesadas, especificándose su estado. Al completar un viaje es necesario que como conductor se cambie el estado de este a completado. Para lo cual se debe ir al turno en Cuenta> Turnos Activos y seleccionas el turno a terminar.</h1>
     </details>
 
     <details>
         <summary class = "title is-5 has-text-black">¿Cómo inscribirse en un turno?</summary>
-        <h1 class = "has-text-black">Como política de seguridad de la empresa es necesario tener una cuenta para poder inscribirse en un turno. Si esto se cumple es necesario ir al apartado Turnos, donde se desplegá los Turnos Activos, en los cuales uno se puede inscribir apretando primero el link Ver detalle que posee cada uno y posteriormente Solicitar, para lo cual se pedirá la dirección donde se unirá al viaje. También se presenta Turnos Solicitados Confirmados, que son los que los conductores aceptaron la participación. Y finalmente Turnos Solicitados Completados, que son los turnos que ya se llevaron acabo.</h1>
+        <h1 class = "has-text-black has-text-justified">Como política de seguridad de la empresa es necesario tener una cuenta para poder inscribirse en un turno. Si esto se cumple es necesario ir al apartado Turnos, donde se desplegá los Turnos Activos, en los cuales uno se puede inscribir apretando primero el link Ver detalle que posee cada uno y posteriormente Solicitar, para lo cual se pedirá la dirección donde se unirá al viaje. También se presenta Turnos Solicitados Confirmados, que son los que los conductores aceptaron la participación. Y finalmente Turnos Solicitados Completados, que son los turnos que ya se llevaron acabo.</h1>
     </details>
 
     <details>
         <summary class = "title is-5 has-text-black">¿Cómo ver el estado de mis solicitudes?</summary>
-        <h1 class = "has-text-black">Para poder ver el estado de las solicitudes enviadas es necesario entrar a Solicitudes y posteriormente a Solicitudes Enviadas Pendientes, donde se desprenderán todas las solicitudes que todavía no son procesadas. Con la posibilidad de editarlas o eliminarlas según se guste. Cuando el conductor acepte o rechace una solicitud esta cambiará al apartado Solicitudes Enviadas Procesadas.</h1>
+        <h1 class = "has-text-black has-text-justified">Para poder ver el estado de las solicitudes enviadas es necesario entrar a Solicitudes y posteriormente a Solicitudes Enviadas Pendientes, donde se desprenderán todas las solicitudes que todavía no son procesadas. Con la posibilidad de editarlas o eliminarlas según se guste. Cuando el conductor acepte o rechace una solicitud esta cambiará al apartado Solicitudes Enviadas Procesadas.</h1>
     </details>
 
     <details>
         <summary class = "title is-5 has-text-black">¿Cómo marcar la puntuación de un turno?</summary>
-        <h1 class = "has-text-black">Después de llevarse a cabo un turno y de que el conductor lo indique como completado, este se encontrará en Menu> Turnos > Turnos Solicitados Completados. Donde tras seleccionar Ver detalles se tendrá la opción de agregar  reseña, para lo cual es necesario agregar una calificación y de forma opcional se puede agregar un comentario. Esta se encontrará en Menú>Turnos>Turnos Solicitados Completados> Reseñas Viaje, pudiendo verse por todos los participantes de este.</h1>
+        <h1 class = "has-text-black has-text-justified">Después de llevarse a cabo un turno y de que el conductor lo indique como completado, este se encontrará en Menu> Turnos > Turnos Solicitados Completados. Donde tras seleccionar Ver detalles se tendrá la opción de agregar  reseña, para lo cual es necesario agregar una calificación y de forma opcional se puede agregar un comentario. Esta se encontrará en Menú>Turnos>Turnos Solicitados Completados> Reseñas Viaje, pudiendo verse por todos los participantes de este.</h1>
     </details>
 
     <details>
         <summary class = "title is-5 has-text-black">¿Poder hablar por medio de mensajes con el chofer y otros pasajeros?</summary>
-        <h1 class = "has-text-black">Para poder comunicarse entre el conductor y los pasajeros, DCCarpooling ofrece la posibilidad de hablar a través de chats. Para esto es necesario ir a Menú>Mensajes. Teniendo la opción de enviar mensajes en todos los chats activos, estos se mantienen en este estado hasta que el conductor selecciona el turno como completado.</h1>
+        <h1 class = "has-text-black has-text-justified">Para poder comunicarse entre el conductor y los pasajeros, DCCarpooling ofrece la posibilidad de hablar a través de chats. Para esto es necesario ir a Menú>Mensajes. Teniendo la opción de enviar mensajes en todos los chats activos, estos se mantienen en este estado hasta que el conductor selecciona el turno como completado.</h1>
     </details>
 
 </div>
