Foto agregada a crud, modelo, migracion, mensajes y show de cuenta

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <div align='rigth'>
-    <h1 class="title is-2 has-text-primary">Help</h1>
+    <h1 class="title is-2 has-text-primary">Ayuda</h1>
     
     <details>
         <summary class = "title is-5 has-text-black mr-4">¿Cómo se diferencia DCCarpooling de otros servicios?</summary>
