--- a/app/views/mensajes/new.html.erb
+++ b/app/views/mensajes/new.html.erb
@@ -2,9 +2,12 @@
 <div class="container">
   <div class="leftSide">
     <div class="head">
-        <div>
-          <p class="title is-5">Chats de turnos</p>
-        </div>
+      <div class="userimg">
+        <img src=<%= current_user.foto %> class="cover">
+      </div>
+      <div>
+        <p class="title is-5">Chats de turnos</p>
+      </div>
     </div>
 
     <div class="chatlist">
