--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -79,18 +79,20 @@ html
   background-color: rgba(238, 88, 88, 0.5);
   border: solid 1px; 
   margin: 5px;
+  border-radius: 10px;
 }
 
 .column-request 
 {
   float: left;
   width: 300px;
-  height: 150px;
+  height: 170px;
   overflow: hidden;
   padding: 10px;
   background-color: rgba(238, 88, 88, 0.5);
   border: solid 1px; 
   margin: 5px;
+  border-radius: 10px;
 }
 
 .contenedor-resena
@@ -108,6 +110,7 @@ html
   border: solid 1px; 
   margin: 5px;
   flex-grow: 10;
+  border-radius: 10px;
 }
 
 .column-cuenta 
@@ -115,6 +118,7 @@ html
   float: left;
   width: 100%;
   padding: 10px;
+  border-radius: 10px;
 }
   
 .row
@@ -141,7 +145,7 @@ html
   white-space: nowrap;
   margin: 10px 0;
   padding-bottom: 10px;
-  height: 150px;
+  height: 200px;
 }
 
 .tile
@@ -216,4 +220,17 @@ select
   border-color: hsl(171, 100%, 41%);
   border-radius: 20px;
   text-align: center;
+}
+
+.contenedor-error
+{
+  float: center;
+  width: unset;
+  height: auto;
+  padding: 10px;
+  background-color: rgba(238, 88, 88, 0.5);
+  border: solid 1px; 
+  margin: 5px;
+  text-align: center;
+  border-radius: 10px;
 }
