--- a/app/views/requests/edit.html.erb
+++ b/app/views/requests/edit.html.erb
@@ -1,13 +1,13 @@
 <div align='center'> 
     <h1 align='center' class = "title is-2 has-text-primary" >Editar solicitud</h1>
 
-    <%= form_with(model: @request, method: :patch, url: requests_update_path(:id => @request.id)) do |form| %>
+    <%= form_for(@request, as: :request, url: requests_update_path(:id => @request.id)) do |form| %>
         <div class="column is-4 is-offset-4">
             <% if @request.errors.any? %>
-                <div>
-                    <h1 align='center' class = "title is-4 has-text-black" >Se produjeron los siguientes errores:</h1>
+                <div class="contenedor-error">
+                    Se produjeron los siguientes errores:
                     <% @request.errors.full_messages.each do |message| %>
-                    <h1 align='center' class = "title is-6 has-text-black" ><%= message %></h1>
+                    <li><%= message %></li>
                     <% end %>
                     <br/>
                 </div>
