--- a/app/views/resenas/new.html.erb
+++ b/app/views/resenas/new.html.erb
@@ -2,12 +2,12 @@
 
 <div class="column is-4 is-offset-4">
   <div  align='center'>
-    <%= form_with(model: @resena, method: :post) do |form| %>
+    <%= form_for @resena do |form| %>
         <% if @resena.errors.any? %>
-          <div>
-            <h1 align='center' class = "title is-4 has-text-black" >Se produjeron los siguientes errores:</h1>
+          <div class="contenedor-error">
+            Se produjeron los siguientes errores:
             <% @resena.errors.full_messages.each do |message| %>
-              <h1 align='center' class = "title is-6 has-text-black" ><%= message %></h1>
+              <li><%= message %></li>
             <% end %>
             <br/>
           </div>
