--- a/app/views/turnos/edit.html.erb
+++ b/app/views/turnos/edit.html.erb
@@ -1,17 +1,17 @@
 <h1 align='center' class = "title is-3 has-text-primary" >Editar Turno</h1>
 
 <div align='center'>
-<%= form_with(model: @turno, method: :patch, url: turnos_update_path(:id => @turno.id)) do |form| %>
-        <% if @turno.errors.any? %>
-          <div>
-            <h1 align='center' class = "title is-4 has-text-black" >Se produjeron los siguientes errores:</h1>
-            <% @turno.errors.full_messages.each do |message| %>
-              <h1 align='center' class = "title is-6 has-text-black" ><%= message %></h1>
-            <% end %>
-            <br/>
-          </div>
-        <% end %>
+    <%= form_for(@turno, as: :turno, url: turnos_update_path(:id => @turno.id)) do |form| %>
         <div class="column is-4 is-offset-4">
+            <% if @turno.errors.any? %>
+                <div class="contenedor-error">
+                    Se produjeron los siguientes errores:
+                    <% @turno.errors.full_messages.each do |message| %>
+                    <li><%= message %></li>
+                    <% end %>
+                    <br/>
+                </div>
+            <% end %>
             <div>
                 <h1 class = "title is-6 has-text-dark">Cantidad asientos</h1>
                 <%= form.text_field :cantidad_asientos, class: "input is-primary is-rounded is-outlined", placeholder:"Cantidad asientos"%>
