--- a/app/views/turnos/new.html.erb
+++ b/app/views/turnos/new.html.erb
@@ -4,10 +4,10 @@
   <div  align='center'>
     <%= form_for @turno, as: :turno do |form| %>
         <% if @turno.errors.any? %>
-          <div>
-            <h1 align='center' class = "title is-4 has-text-black" >Se produjeron los siguientes errores:</h1>
+          <div class="contenedor-error">
+            Se produjeron los siguientes errores:
             <% @turno.errors.full_messages.each do |message| %>
-              <h1 align='center' class = "title is-6 has-text-black" ><%= message %></h1>
+              <li><%= message %></li>
             <% end %>
             <br/>
           </div>
