--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -28,9 +28,10 @@
         <%= @user.phone %>
     </p>
     <br/>
-    <a>
-        <%= button_to "Editar cuenta", users_edit_path(:id => current_user.id), :class => "button is-primary is-rounded is-outlined is-right" %>
-    </a>
+    <% if current_user.id == @user.id %>
+        <a>
+            <%= button_to "Editar cuenta", users_edit_path(:id => current_user.id), :class => "button is-primary is-rounded is-outlined is-right" %>
+        </a>
 </div>
 
     
@@ -118,5 +119,6 @@
             </div>
         </div>
     </div>
+    <% end %>
 </div>
 
