--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -68,6 +68,12 @@
 
     <br/>
     
+    <div class="field">
+      <%= f.text_field :reglas, class: "input is-primary is-rounded is-outlined", placeholder:"Agrega alguna regla para tu auto" %>
+    </div>
+
+    <br/>
+    
     <div class="actions" align='center'>
       <%= f.submit "Update", :class => "button is-primary is-inverted is-rounded is-outlined" %>
     </div>
