--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -51,6 +51,11 @@
     <div class="field">
       <%= f.text_field :phone, class: "input is-primary is-rounded is-outlined", placeholder:"Teléfono" %>
     </div>
+
+    <br/>
+    <div class="field">
+      <%= f.text_field :reglas, class: "input is-primary is-rounded is-outlined", placeholder:"Agrega alguna regla para tu auto" %>
+    </div>
     
     <br/>
     <div class="actions">
