--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,21 +1,1 @@
-<div align='center'>
-    <h1 class="title is-2 has-text-primary">Ayuda</h1>
-    <h1 align='center' class = "title is-4 has-text-black" >Dccarpooling ofrece los siguientes servicios</h1>
-
-    <h1 align='center' class = "title is-5 has-text-black">Turnos</h1>
-
-    <h1 align='center' class = "title is-5 has-text-black">Solicitudes</h1>
-
-    <h1 align='center' class = "title is-5 has-text-black">Mensajes</h1>
-
-    <h1 align='center' class = "title is-5 has-text-black">Reseñas</h1>
-
-    <h1 align='center' class = "title is-5 has-text-black">Navegación</h1>
-
-    <h1 align='center' class = "title is-5 has-text-black"></h1>
-
-    <h1 align='center' class = "title is-5 has-text-black"></h1>
-
-    <h1 align='center' class = "title is-5 has-text-black"></h1>
-
-</div>
+Este va a ser el menu
