--- a/app/views/turnos/new.html.erb
+++ b/app/views/turnos/new.html.erb
@@ -58,6 +58,17 @@
         <div>
             <%= form.text_field :direccion_llegada, class: "input is-primary is-rounded is-outlined", placeholder:"Dirección de llegada"%>
         </div>
+        <% def options_for_status
+          [
+          ['Espacio extra para objetos',nil],
+          ['Solo mochilas','Solo mochilas'],
+          ['Proyecto de tamaño mediano','Proyecto de tamaño mediano'],
+          ['Maqueta grande','Maqueta grande']
+          ]
+        end %>
+        <div>
+          <%= form.select :espacio, options_for_status, {}, prompt: 'Espacio' %>
+        </div>
         <br/>
         <div>
             <%= form.submit 'Crear turno', class: "button is-primary is-inverted is-rounded is-outlined" %>
