--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -3,12 +3,47 @@
     <h1 align='center' class = "title is-2 has-text-primary" >Turnos</h1>
     <h1 align='center' class = "title is-4 has-text-black" >Aquí se encuentra toda la información de los turnos ajenos</h1>
 
-    <div align='center'>    
-        <a>
-            <%= button_to "Nuevo turno", turnos_path,:id => "boton_turnos", :class => "button is-primary is-rounded is-outlined is-right", :method => :get %>
-        </a>
+    <div class="column">
+        <div align='left' style="display: flex; flex-flow: wrap; ">
+            <h3 class = "title is-4 has-text-dark" >Filtros</h3>
+        </div>
     </div>
-
+    <%= form_for(@turno, as: :turno, url:turnos_index_path(:tipo => 1)) do |form| %>
+        <div>
+            <%= form.text_field :conductor, class: "input is-primary is-rounded is-outlined", placeholder:"Nombre Conductor", 
+            value: params[:conductor] %>
+        </div>
+        <% def options_for_status
+            [
+            ['Día de la semana',nil],
+            ['Lunes','Lunes'],
+            ['Martes','Martes'],
+            ['Miércoles','Miércoles'],
+            ['Jueves','Jueves'],
+            ['Viernes','Viernes'],
+            ['Sábado','Sábado'],
+            ['Domingo','Domingo']
+            ]
+        end %>
+        <div>
+            <%= form.select :dia_semana, options_for_status, {}, prompt: 'Día', 
+            value: params[:dia_semana] %>
+        </div>
+        <% def options_for_status
+            [
+            ['Tipo',nil],
+            ['Ida','Ida'],
+            ['Vuelta','Vuelta']
+            ]
+        end %>
+        <div>
+            <%= form.select :tipo_turno, options_for_status, {}, prompt: 'Select One', 
+            value: params[:tipo_turno] %>
+        </div>
+        <div>
+            <%= form.submit 'Filtrar', class: "button is-primary is-rounded is-outlined is-right" %>
+        </div>
+    <% end %>
     <br>
 
     <div class="row">
@@ -18,6 +53,7 @@
                 <h3 class = "title is-4 has-text-dark" >Turnos Activos</h3>
             </div>
         </div>
+
         <div class="row">
             <div class="row_inner">
                 <div class="tile">
@@ -199,3 +235,4 @@
         </div>
     </div>
 <% end %>
+
