--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -5,7 +5,7 @@
     <h1 align='center' class = "title is-5 has-text-black">Datos Personales</h1>
     <p>
         <div class="userimg">
-            <img src=<%= current_user.foto %> class="cover">
+            <img src=<%= @user.foto %> class="cover">
         </div>
     </p>
 
