--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -55,12 +55,12 @@
                                 <div align='center' style="display: flex; flex-flow: wrap; ">
                                     <div class="column-turno">
                                         <% @user = User.find(@turno.user_id)%>
-                                        <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
-                                        <b>Hora salida </b><p><%= turno.hora_salida%></p>
-                                        <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-                                        <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
-                                        <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-                                        <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                                        <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
+                                        <b>Hora salida </b><p><%= @turno.hora_salida%></p>
+                                        <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
+                                        <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
+                                        <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
+                                        <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
                                     </div>
                                 </div>
                             <% end %>
