--- a/app/views/users/registrations/show.html.erb
+++ b/app/views/users/registrations/show.html.erb
@@ -1,90 +1,111 @@
-<div align='center'>
-    <h1 class="title is-2 has-text-primary">Cuenta</h1>
-    <h1 align='center' class = "title is-4 has-text-black" >Aquí se encuentra toda la información de los turnos propios</h1>
+<h1 align='center' class = "title is-2 has-text-primary" >Cuenta</h1>
+<h1 align='center' class = "title is-4 has-text-black" >Aquí se encuentra la información y las reseñas recibidas del usuario</h1>
 
-    <h1 align='center' class = "title is-5 has-text-black">Datos Personales</h1>
-    <p>
-        <div class="userimg">
-            <img src=<%= @user.foto %> class="cover">
+<% if current_user.id == @user.id %>
+    <a align='center'>
+        <%= button_to "Editar cuenta", users_edit_path(:id => current_user.id), :class => "button is-primary is-rounded is-outlined is-inverted is-right" %>
+    </a>
+<% end %>
+
+<br>
+
+<div class="row" align="center">
+    <div class="row_second">
+        <div class="column_head_turno">
+             <% if @tipo_lista.to_i == 1 %>
+                <h3 class = "title is-4 has-text-white" >Información</h3>
+                <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => current_user.id, :tipo_lista => 2) %></h3>
+            <% elsif @tipo_lista.to_i == 2 %>
+                <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => current_user.id, :tipo_lista => 1) %></h3>
+                <h3 class = "title is-4 has-text-white" >Reseñas</h3>
+            <% else %>
+                <h3 class = "title is-4" ><%= link_to "Información", users_show_path(:id => current_user.id, :tipo_lista => 1) %></h3>
+                <h3 class = "title is-4" ><%= link_to "Reseñas", users_show_path(:id => current_user.id, :tipo_lista => 2) %></h3>
+            <% end %>
         </div>
-    </p>
+    </div>
+    <% if @tipo_lista.to_i == 1 %>
+        <br>
+        <div class="column is-4 is-offset-4"> 
+            <p>
+                <div class="userimg">
+                    <img src=<%= @user.foto %> class="cover">
+                </div>
+            </p>
+            
+            <br>
 
-    <p>
-        <strong align='center' class = "title is-5 has-text-black">Nombre:</strong>
-        <%= @user.name %>
-    </p>
-    <br/>
-    <p>
-        <strong align='center' class = "title is-5 has-text-black">Email:</strong>
-        <%= @user.email %>
-    </p>
-    <br/>
-    <p>
-        <strong align='center' class = "title is-5 has-text-black">Dirección:</strong>
-        <%= @user.address %>
-    </p>
-    <br/>
-    <p>
-        <strong align='center' class = "title is-5 has-text-black">Género:</strong>
-        <%= @user.gender %>
-    </p>
-    <br/>
-    <p>
-        <strong align='center' class = "title is-5 has-text-black">Teléfono:</strong>
-        <%= @user.phone %>
-    </p>
-    <br/>
-    <p>
-        <strong align='center' class = "title is-5 has-text-black">Calificación:</strong>
+            <p>
+                <strong align='center' class = "title is-5 has-text-black">Nombre:</strong>
+                <%= @user.name %>
+            </p>
+            <br/>
+            <p>
+                <strong align='center' class = "title is-5 has-text-black">Email:</strong>
+                <%= @user.email %>
+            </p>
+            <br/>
+            <p>
+                <strong align='center' class = "title is-5 has-text-black">Dirección:</strong>
+                <%= @user.address %>
+            </p>
+            <br/>
+            <p>
+                <strong align='center' class = "title is-5 has-text-black">Género:</strong>
+                <%= @user.gender %>
+            </p>
+            <br/>
+            <p>
+                <strong align='center' class = "title is-5 has-text-black">Teléfono:</strong>
+                <%= @user.phone %>
+            </p>
+            <br/>
+            <p>
+                <strong align='center' class = "title is-5 has-text-black">Calificación:</strong>
+                <% if @existen_resenas %>
+                    <%= @promedio %>
+                <% else %>
+                    No ha sido calificado
+                <% end %>
+            </p>
+            <br/>
+            <p>
+                <strong align='center' class = "title is-5 has-text-black">Reglas auto:</strong>
+                <%= @user.reglas %>
+            </p>
+        </div> 
+    <% elsif @tipo_lista.to_i == 2 %>
         <% if @existen_resenas %>
-            <%= @promedio %>
-        <% else %>
-            No ha sido calificado
+            <div class="row">
+                <div class="row_inner_resena">
+                    <div class="tile">  
+                        <% @resenas_usuario.each do |resena|%>
+                            <% if resena.turno.user_id == @user.id%>
+                            <div align='center' style="display: flex; flex-flow: wrap; ">
+                                <div class="column-resena">
+                                    <%
+                                        @estrellas1 = resena.calificacion
+                                        @estrellas2 = 5 - @estrellas1
+                                        %>
+                                    <b>Nombre Pasajero</b><p><%= resena.user.name %></p>
+                                    <b>Calificación </b>
+                                    <p>
+                                        <% 1.step(@estrellas1, 1) do |num| %>
+                                            <ion-icon name="star"></ion-icon>
+                                        <% end %>
+                                        <% 1.step(@estrellas2, 1) do |num| %>
+                                            <ion-icon name="star-outline"></ion-icon>
+                                        <% end %>
+                                    </p>
+                                    <b></b><p><%= link_to 'Ver detalles', resenas_show_path(:id => resena.id) %></p>
+                                </div>
+                            </div>
+                            <% end %>
+                        <% end %>
+                    </div>
+                </div>
+            </div>
         <% end %>
-    </p>
-    <br/>
-    <p>
-        <strong align='center' class = "title is-5 has-text-black">Reglas auto:</strong>
-        <%= @user.reglas %>
-    </p>
-    <br/>
-    <% if current_user.id == @user.id %>
-        <a>
-            <%= button_to "Editar cuenta", users_edit_path(:id => current_user.id), :class => "button is-primary is-rounded is-outlined is-right" %>
-        </a>
     <% end %>
 </div>
 
-<% if @existen_resenas %>
-    <h1 class="title is-2 has-text-primary">Reseñas</h1>
-        <div class="row">
-            <div class="row_inner_resena">
-                <div class="tile">  
-                    <% @resenas_usuario.each do |resena|%>
-                        <% if resena.turno.user_id == @user.id%>
-                        <div align='center' style="display: flex; flex-flow: wrap; ">
-                            <div class="column-resena">
-                                <%
-                                    @estrellas1 = resena.calificacion
-                                    @estrellas2 = 5 - @estrellas1
-                                    %>
-                                <b>Nombre Pasajero</b><p><%= resena.user.name %></p>
-                                <b>Calificación </b>
-                                <p>
-                                    <% 1.step(@estrellas1, 1) do |num| %>
-                                        <ion-icon name="star"></ion-icon>
-                                    <% end %>
-                                    <% 1.step(@estrellas2, 1) do |num| %>
-                                        <ion-icon name="star-outline"></ion-icon>
-                                    <% end %>
-                                </p>
-                                <b></b><p><%= link_to 'Ver detalles', resenas_show_path(:id => resena.id) %></p>
-                            </div>
-                        </div>
-                        <% end %>
-                    <% end %>
-                </div>
-            </div>
-        </div>
-    </div>
-<% end %>
