--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>DCCARPOOLING</title>
+    <link rel="icon" href="https://fontawesomeicons.com/images/svg/car-sport-outline.svg">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
