--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,18 @@
   background-color: rgba(238, 88, 88, 0.5);
 }
 
+.bg-img-2
+{
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(https://images7.alphacoders.com/617/617537.jpg);
+  background-position: center center;
+  background-repeat:  no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 100%;
+  width: 100%;
+}
+
 #menu_list 
 {
   height: 150px;
